test_programs/compile_failure/invalid_entry_point_type/src/main.nr
struct Foo {
    bar: Bar,
}

struct Bar {
    baz: [Field],
}

type SomeAlias = Foo;

fn main(_: SomeAlias) {}
